--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ thiserror = "1.0"
 dirs = "6.0.0"
 anyhow = "1.0.97"
 shellexpand = "3.1"
+nix = { version = "0.29", features = ["process"] } 
 [profile.release]
 opt-level = 'z'  
 lto = true      
